--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/untitled"
-        tools:layout_editor_absoluteX="0dp"
+        app:srcCompat="@drawable/img2"
+        tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <TextView
@@ -21,7 +21,7 @@
         android:layout_width="126dp"
         android:layout_height="46dp"
         android:text="@string/life"
-        android:textColor="#34004E"
+        android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="italic|bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,13 +51,14 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="159dp"
-        android:layout_height="48dp"
+        android:layout_width="271dp"
+        android:layout_height="57dp"
         android:background="@drawable/round"
         android:onClick="openactivty"
         android:text="@string/get_started"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:layout_constraintVertical_bias="0.217" />
@@ -68,14 +69,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/log_in"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.544"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.224"
+        app:layout_constraintVertical_bias="0.223"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
