--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -63,6 +63,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.29"
-        app:srcCompat="@drawable/cup"
+        app:srcCompat="@drawable/try1"
         app:shapeAppearanceOverlay="@style/Roundedsqure"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
