--- a/app/src/main/res/layout/activity_gender.xml
+++ b/app/src/main/res/layout/activity_gender.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff9dd"
+    android:background="@color/white"
     tools:context=".Gender">
     <TextView
         android:id="@+id/textView10"
@@ -71,69 +71,56 @@
         android:layout_width="376dp"
         android:layout_height="365dp"
         android:orientation="vertical"
-        android:background="#fff9dd"
+        android:background="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
         app:layout_constraintVertical_bias="0.515">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="350dp"
-            android:layout_height="99dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="20dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="276dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:drawableLeft="@drawable/ic_male_svgrepo_com"
-                    android:gravity="center"
-                    android:paddingTop="35dp"
-                    android:paddingRight="190dp"
-                    android:text="MALE"
-                    android:textColor="#090707"
-                    android:textSize="16sp"
-                    app:drawableStartCompat="@drawable/ic_male_svgrepo_com"
-                    android:drawableStart="@drawable/ic_male_svgrepo_com" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+            <RadioButton
+                android:id="@+id/radioButton3"
+                android:layout_width="350dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:drawablePadding="0dp"
+                android:drawableLeft="@drawable/ic_male_svgrepo_com"
+                android:gravity="center"
+                android:paddingRight="215dp"
+                android:paddingLeft="40dp"
+                android:text="MALE"
+                android:textSize="16sp"
+                app:drawableStartCompat="@drawable/ic_male_svgrepo_com"
+                android:drawableStart="@drawable/ic_male_svgrepo_com"
+                android:button="@android:color/transparent"
+                android:background="@drawable/radio_selecter"
+                android:textColor="@drawable/text_color"
+                android:elevation="5dp"
+                 />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="350dp"
-            android:layout_height="99dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="20dp" >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/textView14"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:drawableStart="@drawable/ic_female_svgrepo_com"
-                    android:drawableLeft="@drawable/ic_female_svgrepo_com"
-                    android:gravity="center"
-                    android:paddingTop="35dp"
-                    android:paddingRight="190dp"
-                    android:text=" FEMALE"
-                    android:textColor="#090707"
-                    android:textSize="16sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+            <RadioButton
+                android:id="@+id/radioButton4"
+                android:layout_width="350dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:paddingLeft="40dp"
+                android:drawableLeft="@drawable/ic_female_svgrepo_com"
+                android:gravity="center"
+                android:paddingRight="215dp"
+                android:text=" FEMALE"
+                android:textSize="16sp"
+                android:drawableStart="@drawable/ic_female_svgrepo_com"
+                android:button="@android:color/transparent"
+                android:background="@drawable/radio_selecter"
+                android:textColor="@drawable/text_color"
+                android:elevation="5dp" />
+        </RadioGroup>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
