--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     xmlns:tools2="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff9dd"
+    android:background="@color/white"
     tools:context=".welcome">
 
     <TextView
@@ -63,6 +63,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.29"
-        app:srcCompat="@drawable/try1"
-        app:shapeAppearanceOverlay="@style/Roundedsqure"/>
+        app:srcCompat="@drawable/ic_undraw_happy_music_g6wc__1_"
+        app:shapeAppearanceOverlay="@style/Roundedsqure"
+        tools2:ignore="VectorDrawableCompat" />
 </androidx.constraintlayout.widget.ConstraintLayout>
