--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,15 @@
     <!-- Base application theme. -->
     <style name="Theme.Project" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. --> vds
-        <item name="colorPrimary">#D09CD2</item>
+        <item name="colorPrimary">#0AF5CD</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">#D09CD2</item>
+        <item name="colorOnSecondary">#0AF5CD</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">#D09CD2</item>
+        <item name="android:statusBarColor" tools:targetApi="l">#0AF5CD</item>
         <!-- Customize your theme here. -->
     </style>
     <style name="Roundedsqure">
