--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,13 +62,14 @@
     <Button
         android:id="@+id/button2"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="76dp"
-        android:layout_height="35dp"
+        android:layout_width="91dp"
+        android:layout_height="49dp"
+        android:onClick="login_credintionls"
         android:text="@string/log_in"
         android:textColor="#481F48"
         android:textSize="15sp"
-        android:textStyle="italic"
 
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
